<resources>
    <string name="app_name">Sunrise and Sunset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="location_name">Name of the Location</string>
    <string name="select_location">Select Location</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="list">List</string>
</resources>